proc-macros/tests/ui/incorrect/sub/sub_no_unsub.rs
use jsonrpsee::proc_macros::rpc;

// Missing mandatory `unsub` field.
#[rpc(client, server)]
pub trait NoSubUnsub {
	#[subscription(name = "sub", item = String)]
	fn sub(&self);
}

fn main() {}
